fixed the nav links and the height of the survey

--- a/NPGeek.Web/Views/Home/ParkDetail.cshtml
+++ b/NPGeek.Web/Views/Home/ParkDetail.cshtml
@@ -61,7 +61,7 @@
 
     <div class="weather-frosted-background">
         <div class="weather-week weather-today">
-            <h4>@DateTime.Today.DayOfWeek</h4>
+            <h4>Today</h4>
             <i class="wi @iconTranslation[Today.Forecast]"></i>
             <div class="temperatures">
                 <h5 class="weather-detail high">High <span class="weather-conversion">@Today.High</span>&deg;</h5>
