--- a/NPGeek.Web/Content/Site.css
+++ b/NPGeek.Web/Content/Site.css
@@ -20,7 +20,7 @@ body{
     overflow-x: hidden;
 }
 
-.container, .parkContainer {
+.navigation, .parkContainer {
     background-color: black;
 }
 
@@ -120,7 +120,7 @@ body{
     background-color: black !important;
 }
 
-.container {
+.navigation {
     max-width: none !important;
     position: absolute;
     top: 0;
@@ -258,7 +258,7 @@ body{
 }*/
 
 .wi {
-    font-size: 6.5rem;
+    font-size: 8vh;
     color: whitesmoke;
 }
 
@@ -312,7 +312,7 @@ label {
     top: 50%;
     transform: translate(-50%, -50%);
     width: 40vw;
-    height: 50vh;
+    height: 80vh;
     overflow: hidden;
     background: inherit;
     box-shadow: 0px 20px 20px -5px rgba(2, 2, 2, .4);
