--- a/NPGeek.Web/Views/Shared/_Layout.cshtml
+++ b/NPGeek.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="navigation">
             @Html.ActionLink("NPWS", "Index", "Home", new { area = "" }, new { @class = "nav-link navbar-brand" })
             @Html.ActionLink("Top Parks", "FavoriteParks", "FavoriteParks", new { area="" }, new { @class = "nav-link" })
             @Html.ActionLink("Survey", "Survey", "FavoriteParks", new { area = "" }, new { @class = "nav-link" })
