--- a/NPGeek.Web/Views/Home/ParkDetail.cshtml
+++ b/NPGeek.Web/Views/Home/ParkDetail.cshtml
@@ -46,13 +46,13 @@
 }
 <style>
     .park-detail-img-sharp {
-        background-image: url("../Content/Images/parks/@(Model.ParkCode.ToLower()).jpg");
+        background-image: url("http://res.cloudinary.com/yyy32pf/image/upload/q_auto:good/v1522865878/National%20Parks/@(Model.ParkCode.ToLower()).jpg");
         background-repeat: no-repeat;
         background-size: cover;
     }
 </style>
 
-<img class="park-detail-img-blur" src="~/Content/Images/parks/@(Model.ParkCode.ToLower()).jpg" />
+<img class="park-detail-img-blur" src="http://res.cloudinary.com/yyy32pf/image/upload/q_auto:low/v1522865878/National%20Parks/@(Model.ParkCode.ToLower()).jpg" />
 
 <div class="park-detail-img-sharp">
 
